# rust-cli-template

./: README.md  README_zh-CN.md
template/: Cargo.toml
template/src/: config.rs  log.rs  main.rs
template/src/commands/: command1.rs  command2.rs
