[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"
authors = ["{{authors}}"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.15.19"
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.5.66"
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
tokio = { version = "1.49.0", features = ["full"] }
tokio-graceful-shutdown = "0.19.2"
miette = "7.6.0"

[build-dependencies]
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.5.66"
miette = "7.6.0"

[[bin]]
name = "{{application}}"
path = "src/main.rs"
